<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="apps_name">Permission Listener</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_apk_list">AppList Demo</string>
    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name:</string>
    <string name="package_name">Package Name:</string>
    <string name="version">Version:</string>
    <string name="features">Required Features:</string>
    <string name="permissions">Required Permissions:</string>
    <string name="req_version">Taget SDK Version:</string>
    <string name="path_info">Path Info:</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed:</string>
    <string name="modified">Last Modified:</string>
    <string name="title_activity_apk_list_activity2">ApkListActivity2</string>
  	<string name="title_activity_apk_inf">App Info</string>
    <string name="perm_crit">Permission Criticality</string>
    <string name="status">Status</string>
    <string name="action_search">Search</string>
	<string name="search_hint">Name of app</string>
	<string name="action_sortalpha">Sort Alphabetically</string>
    <string name="action_sortstate">Sort State-wise</string>
    <string name="action_about">About</string>
    <string name="abt">Permission Listener shows all the 3rd party applications installed on your device. The background of each application is colour coded. These colours are based on the maximum weighted permission in that application. The weight of permissions ranges from 10 to 37.</string>
    <string name="abt_green">Green:Safe</string>
    <string name="abt_yellow">Yellow: Risky</string>
    <string name="abt_orange">Orange: Harmful</string>
    <string name="abt_red">Red: Deleterous</string>
    <string name="abt1">When you click on any of the application from the list, you will get the details of that application such as Application name, Package name, Status, Version, Required permissions, Permissions criticality, Path information, Target sdk-version, Installed and Modified time and date.</string>
</resources>
